--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -430,6 +430,14 @@
             </intent-filter>
         </activity-alias>
 
+        <activity android:name=".tuner.LockscreenActivity"
+                  android:theme="@style/ExTunerSettings"
+                  android:label="@string/tuner_lock_screen"
+                  android:process=":tuner"
+                  android:parentActivityName="com.awaken.settings.Lockscreen"
+                  android:exported="true">
+        </activity>
+
         <activity-alias
             android:name=".tuner.StatusBarTuner"
             android:targetActivity=".tuner.TunerActivity"
